# vision.cpp

./: .gitignore  CMakeLists.txt  benchmark.bat  build.bat  build_CUDA.bat  build_VULKAN.bat  test.bat  vision.cpp.code-workspace
.github/: copilot-instructions.md
include/visp/: ml.h  vision.h
src/visp/: ml.cpp  nn.cpp  nn.h  vision.cpp
src/visp/arch/: birefnet.cpp  depth-anything.cpp  dino.cpp  esrgan.cpp  migan.cpp  mobile-sam.cpp
tests/: benchmark.cpp  test-ml.cpp  test-models.cpp  test_primitives.py  testing.cpp  testing.h  workbench.cpp
